@@ -13,6 +13,7 @@ Date: ????
     - Fixed fluids not being enabled at start even if their offshore pump was
     - Fixed fluid temperature variants not copying recipe categories from their parents
     - Fixed fluid variant ingredient in lists being completely wrong in most cases
+    - Fixed several inconsistencies with fluid temperature variation researched status
 ---------------------------------------------------------------------------------------------------
 Version: 2.6.0
 Date: 2021-04-05
